# llms-fetch-mcp

./: .mcp.json  CLAUDE.md  Cargo.toml  dist-workspace.toml
.claude/: settings.json
src/: main.rs  toc.rs
src/snapshots/: llms_fetch_mcp__tests__format_output_snapshots__snapshot_empty_result.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_llms_full.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_mixed_toc_presence.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_multiple_files_convex.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_nextjs_llms.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_python_tutorial.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_react_learn.snap  llms_fetch_mcp__tests__format_output_snapshots__snapshot_small_file_no_toc.snap
